scrollbar style sheets done; body scrollbar fixed

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,8 @@ body{
 }
 
 #blocks{
-    position: relative;
+    background: #022B2F;
+    position: absolute;
     height: 100%;
     width: 100%;
 }
@@ -264,28 +265,7 @@ svg .draw{
     background:radial-gradient(#022B2F, black);
     z-index: 0;
 }
-.scrollbar {
-    background: transparent;
-    overflow-y: scroll;
-}
 
-.scrollbar-juicy-peach::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-color: rgba(255, 255, 255, 0.1);
-    border-radius: 10px; }
-    
-.scrollbar-juicy-peach::-webkit-scrollbar {
-    width: 12px;
-    background-color: transparent;
-}
-    
-.scrollbar-juicy-peach::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-    background-image: -webkit-gradient(linear, left top, right top, from(#ffecd2), to(#fcb69f));
-    background-image: -webkit-linear-gradient(left, #ffecd2 0%, #fcb69f 100%);
-    background-image: linear-gradient(to right, #ffecd2 0%, #fcb69f 100%); 
-}
     
 
 .content{
